introduced detector with yolov7tiny

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,20 @@
 [SOURCE]
 path=https://s3-eu-west-1.amazonaws.com/jamcams.tfl.gov.uk/00001.06648.mp4?i=8l3ax
+; path=/Users/inanc/Projects/Personal/eyeson/resources/2.mp4
+; path==/Users/inanc/Projects/Personal/eyeson/resources/london.mp4
 loop=false
 
+[DETECTOR]
+weight=/Users/inanc/Projects/Personal/eyeson/resources/yolov7-tiny.weights
+config=/Users/inanc/Projects/Personal/eyeson/resources/yolov7-tiny.cfg
+names=/Users/inanc/Projects/Personal/eyeson/resources/coco.names
+threshold=0.1
+nms=0.8
+networkHeight=416
+networkWidth=416
+
 [DISPLAY_WINDOW]
-name="Display"
+name=Display
 
 [DEBUG]
 showFrameIndex=true
