--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [SOURCE]
 path=https://s3-eu-west-1.amazonaws.com/jamcams.tfl.gov.uk/00001.06648.mp4?i=8l3ax
 ; path=/Users/inanc/Projects/Personal/eyeson/resources/2.mp4
-; path==/Users/inanc/Projects/Personal/eyeson/resources/london.mp4
+; path=/Users/inanc/Projects/Personal/eyeson/resources/london.mp4
 loop=false
 
 [DETECTOR]
@@ -19,3 +19,4 @@ name=Display
 [DEBUG]
 showFrameIndex=true
 stepByStepFrame=false
+showFrameFetchError=false
