introduced near miss detector

--- a/config.ini
+++ b/config.ini
@@ -8,10 +8,19 @@ loop=false
 weight=/Users/inanc/Projects/Personal/eyeson/resources/yolov7-tiny.weights
 config=/Users/inanc/Projects/Personal/eyeson/resources/yolov7-tiny.cfg
 names=/Users/inanc/Projects/Personal/eyeson/resources/coco.names
-threshold=0.1
-nms=0.8
+threshold=0.5
+nms=0.6
 networkHeight=416
 networkWidth=416
+
+[NEARMISS]
+class1=bus
+class2=car
+output=/Users/inanc/Projects/Personal/eyeson/nearmisses2/
+distance=70
+inflationSmallImage=0.3
+saveBigImage=true
+saveSmallImage=true
 
 [DISPLAY_WINDOW]
 name=Display
