deleted big videos

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,5 @@
 [SOURCE]
 path=https://s3-eu-west-1.amazonaws.com/jamcams.tfl.gov.uk/00001.06648.mp4?i=8l3ax
-; path=/Users/inanc/Projects/Personal/eyeson/resources/2.mp4
-; path=/Users/inanc/Projects/Personal/eyeson/resources/london.mp4
 loop=false
 
 [DETECTOR]
@@ -10,8 +8,8 @@ config=/Users/inanc/Projects/Personal/eyeson/resources/yolov7-tiny.cfg
 names=/Users/inanc/Projects/Personal/eyeson/resources/coco.names
 threshold=0.5
 nms=0.6
-networkHeight=416
-networkWidth=416
+networkHeight=64
+networkWidth=64
 
 [NEARMISS]
 class1=bus
@@ -23,7 +21,7 @@ saveBigImage=true
 saveSmallImage=true
 
 [DISPLAY_WINDOW]
-name=Display
+name=Eyes On
 
 [DEBUG]
 showFrameIndex=true
