--- a/config.ini
+++ b/config.ini
@@ -3,9 +3,9 @@ path=https://s3-eu-west-1.amazonaws.com/jamcams.tfl.gov.uk/00001.06648.mp4?i=8l3
 loop=false
 
 [DETECTOR]
-weight=/Users/inanc/Projects/Personal/eyeson/resources/yolov7-tiny.weights
-config=/Users/inanc/Projects/Personal/eyeson/resources/yolov7-tiny.cfg
-names=/Users/inanc/Projects/Personal/eyeson/resources/coco.names
+weight=./resources/yolov7-tiny.weights
+config=./resources/yolov7-tiny.cfg
+names=./resources/coco.names
 threshold=0.5
 nms=0.6
 networkHeight=64
@@ -14,11 +14,11 @@ networkWidth=64
 [NEARMISS]
 class1=bus
 class2=car
-output=/Users/inanc/Projects/Personal/eyeson/nearmisses2/
+output=./nearmisses2/
 distance=70
 inflationSmallImage=0.3
-saveBigImage=true
-saveSmallImage=true
+saveBigImage=false
+saveSmallImage=false
 
 [DISPLAY_WINDOW]
 name=Eyes On
