set default for backend config_file parameter, gitignore extends to have last_frame.jpg

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -27,7 +27,7 @@ name = Eyes On
 showframeindex = true
 stepbystepframe = false
 showframefetcherror = false
-showdisplaywindow = true
+showdisplaywindow = false
 
 [BACKEND]
 savelastframe = true
